test/correct/Integer.hs
square :: Integer -> Integer
square x = x * x

main = square 13
