test/typeerrors/Heuristics/SimilarFunction2.hs
module SimilarFunction2 where

keerPi :: Float -> Float
keerPi x = pi * x 
